ai and deployment