@@ -7,6 +7,7 @@ import lombok.Data;
 import lombok.NoArgsConstructor;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Data
 @NoArgsConstructor
@@ -30,32 +31,54 @@ public class Category {
 
     private boolean active = true;
 
-    @OneToMany(mappedBy = "category", cascade = CascadeType.ALL, fetch = FetchType.EAGER)
+    // ✅ Relation via la table de liaison
+    @OneToMany(mappedBy = "category", cascade = CascadeType.ALL, orphanRemoval = true, fetch = FetchType.EAGER)
     @OrderBy("displayOrder ASC")
     @Builder.Default
-    private List<CategoryField> fields = new ArrayList<>();
+    private List<CategoryFieldMapping> fieldMappings = new ArrayList<>();
+
+    // --- Méthodes utilitaires ---
+
+    public List<CategoryField> getFields() {
+        return fieldMappings.stream()
+                .map(CategoryFieldMapping::getField)
+                .collect(Collectors.toList());
+    }
 
     public List<CategoryField> getRequiredFields() {
-        return fields.stream()
-                .filter(CategoryField::isRequired)
-                .toList();
+        return fieldMappings.stream()
+                .filter(CategoryFieldMapping::isRequired)
+                .map(CategoryFieldMapping::getField)
+                .collect(Collectors.toList());
     }
 
     public List<String> getFieldNames() {
-        return fields.stream()
-                .map(CategoryField::getFieldName)
-                .toList();
+        return fieldMappings.stream()
+                .map(m -> m.getField().getFieldName())
+                .collect(Collectors.toList());
     }
 
     public String getFieldDescriptions() {
         StringBuilder sb = new StringBuilder();
-        for (CategoryField field : fields) {
+        for (CategoryFieldMapping mapping : fieldMappings) {
+            CategoryField field = mapping.getField();
             sb.append(String.format("- %s (%s)%s\n",
                     field.getFieldName(),
                     field.getFieldType(),
-                    field.isRequired() ? " [OBLIGATOIRE]" : " [optionnel]"
+                    mapping.isRequired() ? " [OBLIGATOIRE]" : " [optionnel]"
             ));
         }
         return sb.toString();
+    }
+
+    // Si vous avez besoin d'ajouter un champ depuis le code (par ex. pour tests)
+    public void addField(CategoryField field, boolean required, Integer displayOrder) {
+        CategoryFieldMapping mapping = CategoryFieldMapping.builder()
+                .category(this)
+                .field(field)
+                .required(required)
+                .displayOrder(displayOrder != null ? displayOrder : fieldMappings.size() + 1)
+                .build();
+        fieldMappings.add(mapping);
     }
 }
